--- a/auth-service/EventFlow.AuthService/EventFlow.AuthService.csproj
+++ b/auth-service/EventFlow.AuthService/EventFlow.AuthService.csproj
@@ -23,6 +23,9 @@
     <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="9.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\shared-kernel\EventFlow.SharedKernel\EventFlow.SharedKernel.csproj" />
