--- a/core-service/EventFlow.CoreService/EventFlow.CoreService.csproj
+++ b/core-service/EventFlow.CoreService/EventFlow.CoreService.csproj
@@ -21,6 +21,8 @@
     <PackageReference Include="Polly" Version="8.6.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\shared-kernel\EventFlow.SharedKernel\EventFlow.SharedKernel.csproj" />
