--- a/gateway-api/EventFlow.GatewayApi/EventFlow.GatewayApi.csproj
+++ b/gateway-api/EventFlow.GatewayApi/EventFlow.GatewayApi.csproj
@@ -14,5 +14,6 @@
     <PackageReference Include="StackExchange.Redis" Version="2.8.41" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
     <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Redis" Version="9.0.0" />
   </ItemGroup>
 </Project>
