--- a/notification-service/EventFlow.NotificationService/EventFlow.NotificationService.csproj
+++ b/notification-service/EventFlow.NotificationService/EventFlow.NotificationService.csproj
@@ -14,8 +14,10 @@
     </PackageReference>
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.5" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\shared-kernel\EventFlow.SharedKernel\EventFlow.SharedKernel.csproj" />
