--- a/worker-service/EventFlow.WorkerService/EventFlow.WorkerService.csproj
+++ b/worker-service/EventFlow.WorkerService/EventFlow.WorkerService.csproj
@@ -15,9 +15,11 @@
     </PackageReference>
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.5.5" />
     <PackageReference Include="Serilog.Extensions.Hosting" Version="9.0.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="9.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\shared-kernel\EventFlow.SharedKernel\EventFlow.SharedKernel.csproj" />
